...
                                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <state key="normal" title="Sign In"/>
                                        <connections>
                                            <segue destination="una-6j-guL" kind="presentation" identifier="SignIn" id="gIB-OX-Qv2"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Dashboard" id="pBD-10-vz5">
                        <barButtonItem key="leftBarButtonItem" image="plus" catalog="system" id="lwx-mi-oj3">
                            <connections>
                                <action selector="goToCustomeView:" destination="s0a-F6-sdi" id="N4h-Ah-8iw"/>
...
                        <viewLayoutGuide key="safeArea" id="ucJ-ve-5n5"/>
                    </view>
                    <navigationItem key="navigationItem" title="Transactions" id="RSR-3I-Kza"/>
                    <connections>
                        <outlet property="tableView" destination="Dgr-GO-OPb" id="fiI-XH-bBQ"/>
...
                                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="$0.00" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8hH-ds-ff6">
                                                                <rect key="frame" x="159" y="0.0" width="143" height="32.5"/>
                                                                <accessibility key="accessibilityConfiguration" identifier="AmountTF">
                                                                    <accessibilityTraits key="traits" keyboardKey="YES"/>
                                                                </accessibility>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vbr-Vs-pak">
                                                        <rect key="frame" x="0.0" y="52.5" width="302" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="DateTF">
                                                            <accessibilityTraits key="traits" keyboardKey="YES"/>
                                                        </accessibility>
...
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Category" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="O3K-dw-FLJ">
                                                        <rect key="frame" x="0.0" y="106.5" width="302" height="34"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="CategoryTF"/>
                                                        <fontDescription key="fontDescription" name="Exo-Regular" family="Exo" pointSize="17"/>
                                                        <textInputTraits key="textInputTraits"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wxz-Jf-BXE">
                                                        <rect key="frame" x="0.0" y="232.5" width="302" height="42"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="SaveButton"/>
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="42" id="Sgv-70-CHt"/>
...
                                    </subviews>
                                </tableViewCellContentView>
                                <accessibility key="accessibilityConfiguration" identifier="Food and Drink"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="Food and Drink" value=""/>
...
