...
        case 0:
            cellText = "Connect your bank with Plaid"
            cellImage = UIImage(named: "plaid-logo-icon")
        case 1:
            switch row {
            case 0:
                cellText = "View Transactions"
                cellImage = UIImage(named: "budget")
                
            case 1:
                cellText = "Add an expense"
                cellImage = UIImage(named: "minus-icon")
                
            default:
                cellText = "Add income"
                cellImage = UIImage(named: "plus-icon")
                
            }
        default:
            cellText = "Create a budget"
            cellImage = UIImage(named: "budget")
...
